--- a/css/main.css
+++ b/css/main.css
@@ -9,14 +9,14 @@ html {
 }
 
 nav{
-	background-color: #427C74;
+	background-color: #D59B25;
 	/*position: fixed;*/
 	box-shadow: none;
 }
 nav ul a{
 	color: #90B2AE;
 }
-#banner{
+/*#banner{
 	height: 39em;
   top: 4.2em;
 }
@@ -24,24 +24,24 @@ nav ul a{
 	width: 100%;
 	height: 43.2em;
   margin-bottom: -5px;
-}
+}*/
 img[src="imgs/logo.png"]{
-	margin: 0.2em 1em;
+	margin: 0.3% 1%;
 }
-#sobre-mi div h4{
+/*#sobre-mi div h4{
 	color: #17544C;
 	text-align: center;
 	margin: 2em 2em 0.2em 2em;
-}
+}*/
 .container{
 	width: 80% !important;
 }
-#sobre-mi div .divider{
+/*#sobre-mi div .divider{
 	width: 15%;
   margin: auto;
   height: 3px;
   background-color: #427C74;
-}
+}*/
 .parallax img{
 	display: block;
 }
@@ -51,23 +51,60 @@ article:first-child .heading{
 	background-size: cover;
 	background-position: center;
 	/*padding: 11.32em 9em;*/
+	/*padding-left:11%;*/
+	/*padding: auto;*/
 	height: 38.9em;
-	margin-bottom: 2em;
+	/*margin-bottom: 2em;*/
 }
 .heading div{
 	width: 80%;
-	border: 4px white solid;
+	border: 10px white double;
 	border-right: none;
 	border-left: none;
-	padding: 2em;
+	padding: 5% 5% 3% 5%;
 	margin: auto;
-	position: relative;
-	top: 10em;
+	word-wrap: break-word;
+		/*top: center;*/
 }
-.heading div h1 {
+.heading div h1, h1 + h3 {
 	font-family: 'Open Sans Condensed', sans-serif;
-  letter-spacing: -0.32px;
+  /*letter-spacing: -0.32px;*/
   color: white;
   margin: 0;
-  text-align: center;
+  font-size: 3em;
+  margin-bottom: 0.5em;
+  /*text-align: center;*/
 }
+h3:first-child[class="flow-text"]{
+	color: #C18000;
+	/*font-size: 100%;*/
+  letter-spacing: 10px;
+  word-spacing: 9px;
+}
+.divider:nth-child(2){
+	width: 14%;
+	margin: auto;
+	margin-bottom: 7%;
+	margin-top: -0.4%;
+	background-color: #C18000;
+}
+img[alt="perfil"], img[alt="coder"]{
+	/*width: 100%;*/
+	height: 10em;
+	margin-bottom: 1em;
+}
+article:nth-child(2), article:nth-child(4){
+	height: 43.3em;
+	/*padding-bottom: 1em;*/
+}
+
+.row + .divider{
+	margin: 5% 0;
+}
+
+.parallax-container{
+	height: 10em;
+}
+/*article:nth-child(4){
+	height: 43.3em;
+}*/
