--- a/css/main.css
+++ b/css/main.css
@@ -181,6 +181,7 @@ p[class="black-text"], p[class="black-text left-align"]{
 	font-size: 110%;
 }
 #boton-subir{
+	display: none;
 	background-color: #EC9D00;
 	position: fixed;
 	/*left:60%;*/
@@ -255,16 +256,22 @@ button[type="button"]:hover{
 	background-color: rgba(230, 195, 51, 0.8);
 	height: 10em;
 	text-align: center;
-	padding-top:8%;
+	padding-top:9%;
+	padding-left: 25%;
+	/*padding: auto;*/
 	border-radius: 5px;
+	/*margin-left: 25%;*/
 }
 .hover div h5{
 	color: black;
-	border: 8px double black;
-	border-right: none;
-	border-left: none;
+	/*border: 8px double black;*/
+	/*border-right: none;*/
+	/*border-left: none;*/
+	/*margin-top: 2em;*/
 	width: 50%;
-	margin-left: 25%;
+	font-size: 300%;
+	/*margin-left: 25%;*/
+	font-family: 'Rajdhani', sans-serif;
 }
 .hover:hover div{
 	display: block;
@@ -336,4 +343,13 @@ h2 + a {
 }
 h2 + a:hover{
 	background-color: #F3CD65;
+}
+img[alt="imganen-menu"]{
+	margin: 20% 0 0 24%;
+}
+#slide-out li{
+	margin-top: 5%;
+}
+#slide-out li:hover{
+	background-color: rgba(208, 201, 45, 0.77);
 }
