--- a/css/main.css
+++ b/css/main.css
@@ -3,43 +3,19 @@
 	margin: 0;
 	box-sizing: border-box;
 }
-
-
 nav{
-	/*background-color: #D59B25;*/
 	background-color: #E68C19;
-	/*position: fixed;*/
 	box-shadow: none;
 }
 nav ul a{
 	color: #f4cd36;
 }
-/*#banner{
-	height: 39em;
-  top: 4.2em;
-}
-#banner img{
-	width: 100%;
-	height: 43.2em;
-  margin-bottom: -5px;
-}*/
 img[src="imgs/logo.png"]{
 	margin: 0.3% 1%;
 }
-/*#sobre-mi div h4{
-	color: #17544C;
-	text-align: center;
-	margin: 2em 2em 0.2em 2em;
-}*/
 .container{
 	width: 80% !important;
 }
-/*#sobre-mi div .divider{
-	width: 15%;
-  margin: auto;
-  height: 3px;
-  background-color: #427C74;
-}*/
 .parallax img{
 	display: block;
 }
@@ -48,11 +24,7 @@ img[src="imgs/logo.png"]{
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
-	/*padding: 11.32em 9em;*/
-	/*padding-left:11%;*/
-	/*padding: auto;*/
 	height: 38.9em;
-	/*margin-bottom: 2em;*/
 }
 .heading div{
 	width: 80%;
@@ -62,16 +34,13 @@ img[src="imgs/logo.png"]{
 	padding: 3% 4% 4% 4%;
 	margin: auto;
 	word-wrap: break-word;
-		/*top: center;*/
 }
 .heading div h1, h1 + h3 {
 	font-family: 'Open Sans Condensed', sans-serif;
-  /*letter-spacing: -0.32px;*/
   color: white;
   margin: 0;
   font-size: 3em;
   margin-bottom: 0.5em;
-  /*text-align: center;*/
 }
 .heading div h1 + h3{
 	color: #ff8f00;
@@ -79,7 +48,6 @@ img[src="imgs/logo.png"]{
 
 h3:first-child[class="flow-text"]{
 	color: #eedf6e;
-	/*font-size: 100%;*/
   letter-spacing: 10px;
   word-spacing: 9px;
 }
@@ -91,13 +59,9 @@ h3:first-child[class="flow-text"]{
 	background-color: #C18000;
 }
 img[alt="perfil"], img[alt="coder"]{
-	/*width: 100%;*/
 	height: 10em;
-	/*margin-bottom: 2em;*/
 }
 #section article:nth-child(2){
-	/*height: 43.3em;*/
-	/*padding-bottom: 1em;*/
 	padding-bottom: 3%;
 }
 
@@ -108,67 +72,26 @@ img[alt="perfil"], img[alt="coder"]{
 .parallax-container{
 	height: 15em;
 }
-/*article:nth-child(4){
-	height: 43.3em;
-}*/
-
-/*.habilidades:first-child div img:first-child, .habilidades:nth-child(2) div img:first-child{
-	width: 8em;
-}*/
-/*.habilidades:nth-child(2) div img:first-child{
-  width: 8em;
-}*/
-/*.habilidades:nth-child(3) div img:first-child, .framework:first-child div img:first-child, .framework:nth-child(2) div img:first-child{
-	width: 10em;
-}*/
-/*.framework:first-child div img:first-child{
-	width: 10em;
-}*/
-/*.framework:nth-child(2) div img:first-child{*/
-  /*width: 10em;
-  margin-top: 3em;
-}*/
-/*.hover{
-	padding: 5% 0;
-	margin: 2% 0;
-}
-.hover:hover{
-	background-color: rgba(255, 186, 48, 0.6); 
-}*/
 footer{
-	/*height: 10em;*/
 	padding: 3%;
-	/*background-color: #9C6800;*/
 	background-color: #F38E0E;
 }
 img[alt="link"]{
 	width: 5em;
 	margin: 7% 7% 0 7%;
 }
-img[alt="link"]:hover{
+/*img[alt="link"]:hover{
 	background-color: black;
 	border-radius: 40px;
-}
-
+}*/
 img[alt="cel"], [alt="github"], [alt="gmail"]{
 	width: 6em;
 	margin: 7% 7% 0 7%;
 }
 
-img[alt="cel"]:hover, [alt="github"]:hover, [alt="gmail"]:hover{
+/*img[alt="cel"]:hover, [alt="github"]:hover, [alt="gmail"]:hover{
 	background-color: black;
 	border-radius: 100px;
-}
-/*img[alt="github"]{
-	width: 6em;
-	margin: auto;
-}
-img[alt="gmail"]{
-	width: 6em;
-}
-img[alt="gmail"]{
-	width: 6em;
-	margin: auto;
 }*/
 h5:first-child{
 	font-family: 'Titillium Web', sans-serif;
@@ -184,17 +107,13 @@ p[class="black-text"], p[class="black-text left-align"]{
 	display: none;
 	background-color: #EC9D00;
 	position: fixed;
-	/*left:60%;*/
 	right: 2%;
 	bottom: 3%;
 	cursor: pointer;
-	/*padding: 2em;*/
-	/*font-size: 150%;*/
 }
 #boton-subir i{
 	font-size: 50px;
 	color: #DBC321;
-	/*padding: 0.2em;*/
 }
 button[type="button"]{
 	padding: 0.4em;
@@ -203,7 +122,6 @@ button[type="button"]{
 	border: 2px solid white;
 	font-size: 130%;
 	margin-top: 1em;
-	/*font-weight: bold;*/
 }
 button[type="button"] a{
 	color: #D49901;
@@ -217,16 +135,13 @@ button[type="button"]:hover{
 }
 
 .uno {
-	/*border: 2px solid red;*/
 	width: 80%;
-	/*margin-top: 3em;*/
-	/*background-image: url("../imgs/0.jpg");*/
   background-position:center;
 	background-repeat: no-repeat;
 	background-size: cover;
 	height: 15em;
 	border-radius: 10px;
-	    margin-left: 11%;
+  margin-left: 11%;
 }
 
 .uno div {
@@ -242,10 +157,8 @@ button[type="button"]:hover{
 }
 
 .hover{
-	/*border: 2px solid red;*/
 	width: 80%;
 	margin-top: 3em;
-	/*background-image: url("../imgs/0.jpg");*/
   background-position:center;
 	background-repeat: no-repeat;
 	background-size: contain;
@@ -258,19 +171,12 @@ button[type="button"]:hover{
 	text-align: center;
 	padding-top:9%;
 	padding-left: 25%;
-	/*padding: auto;*/
 	border-radius: 5px;
-	/*margin-left: 25%;*/
 }
 .hover div h5{
 	color: black;
-	/*border: 8px double black;*/
-	/*border-right: none;*/
-	/*border-left: none;*/
-	/*margin-top: 2em;*/
 	width: 50%;
 	font-size: 300%;
-	/*margin-left: 25%;*/
 	font-family: 'Rajdhani', sans-serif;
 }
 .hover:hover div{
@@ -318,16 +224,9 @@ button[type="button"]:hover{
 	background-color: rgba(238, 152, 29, 0.3); 
 	color: white;
 }
-/*.ig{
-	background-image: url(../imgs/frase-3.png);
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center;
-}*/
 h2 {
 	font-size: 350% !important;
 	color: #eedf6e;
-	/*font-size: 100%;*/
   letter-spacing: 7px;  
   word-spacing: 20px;
   margin: 2em  0 1em 0;
@@ -352,4 +251,9 @@ img[alt="imganen-menu"]{
 }
 #slide-out li:hover{
 	background-color: rgba(208, 201, 45, 0.77);
+}
+footer img[src$=".png"] + div {
+	color: white;
+	font-family: 'Rajdhani', sans-serif;
+	font-size: 130%;
 }
