--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,16 @@
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 9px rgba(0,0,0,.8);
+    border-radius: 3em;
+}
+::-webkit-scrollbar {
+    width: 6px;
+}
+::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 1em;
+}
+
+
 *{
 	padding: 0;
 	margin: 0;
