--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
     border-radius: 3em;
 }
 ::-webkit-scrollbar {
-    width: 6px;
+    width: 10px;
 }
 ::-webkit-scrollbar-thumb {
     background-color: rgba(0, 0, 0, 0.2);
@@ -17,7 +17,7 @@
 	box-sizing: border-box;
 }
 nav{
-	background-color: #E68C19;
+	background-color: #6b6b6b;
 	box-shadow: none;
 }
 nav ul a{
@@ -34,7 +34,8 @@ img[src="imgs/logo.png"]{
 	display: block;
 }
 #section article:first-child .heading{
-	background-image: url(../imgs/banner.png);
+	background-image: url(../imgs/ciudad.png
+		);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
@@ -42,26 +43,31 @@ img[src="imgs/logo.png"]{
 }
 .heading div{
 	width: 80%;
-	border: 10px white double;
-	border-right: none;
-	border-left: none;
 	padding: 3% 4% 4% 4%;
 	margin: auto;
 	word-wrap: break-word;
 }
 .heading div h1, h1 + h3 {
 	font-family: 'Open Sans Condensed', sans-serif;
-  color: white;
+  color: black;
+  font-weight: bold;
   margin: 0;
   font-size: 3em;
   margin-bottom: 0.5em;
 }
+article{
+	margin-bottom: 2em;
+}
 .heading div h1 + h3{
-	color: #ff8f00;
+	/*color: #f1d606;*/
+	color: black;
+	font-weight: bold;
+	font-size: 230%;
 }
 
 h3:first-child[class="flow-text"]{
 	color: #eedf6e;
+	margin-top: 8%;
   letter-spacing: 10px;
   word-spacing: 9px;
 }
@@ -84,7 +90,7 @@ img[alt="perfil"], img[alt="coder"]{
 }
 
 .parallax-container{
-	height: 15em;
+	height: 20em;
 }
 footer{
 	padding: 3%;
@@ -110,6 +116,7 @@ img[alt="cel"], [alt="github"], [alt="gmail"]{
 h5:first-child{
 	font-family: 'Titillium Web', sans-serif;
 	color:#D9B716;
+	margin-bottom: 2em;
 
 }
 p[class="black-text"], p[class="black-text left-align"]{
@@ -117,28 +124,40 @@ p[class="black-text"], p[class="black-text left-align"]{
 	font-weight: bold;
 	font-size: 110%;
 }
+
+@keyframes latidos {
+    from { transform: none; }
+    50% { transform: scale(0.8); }
+    to { transform: none; }
+}
+
 #boton-subir{
+	animation: latidos 1.5s infinite;
 	display: none;
-	background-color: #EC9D00;
+	/*background-color: #6b6b6b;*/
 	position: fixed;
-	right: 8%;
+	right: 3%;
 	bottom: 3%;
 	cursor: pointer;
 }
 #boton-subir i{
-	font-size: 50px;
+	font-size: 70px;
 	color: #DBC321;
+}
+#boton-subir:hover i{
+	color: #949298;
 }
 button[type="button"]{
 	padding: 0.4em;
 	margin-left: 8%;
 	background-color: transparent;
-	border: 2px solid white;
-	font-size: 130%;
-	margin-top: 1em;
+	/*border:none;*/
+	border: 1px solid #E1BF22;
+	margin-top: 3em;
 }
 button[type="button"] a{
-	color: #D49901;
+	color: #f1d606;
+	font-size: 150%;
 }
 
 button[type="button"]:hover a{
@@ -165,6 +184,7 @@ button[type="button"]:hover{
 	height: 15em;
 	text-align: center;
 	padding-top: 4em;
+	border-radius: 10px;
 }
 
 .uno:hover div{
@@ -223,6 +243,11 @@ button[type="button"]:hover{
 .tumblr{
 	background-image: url(../imgs/tumblr.png);
 }
+.uno:hover{
+	-webkit-transform: scale(1.1);
+/*	-ms-transform: scale(1.3);
+	transform: scale(1.3);*/
+}
 .trello{
 	background-image: url(../imgs/trello.png);
 }
@@ -243,7 +268,7 @@ h2 {
 	font-size: 350% !important;
 	color: #eedf6e;
   letter-spacing: 7px;  
-  word-spacing: 20px;
+  word-spacing: 10px;
   margin: 2em  0 1em 0;
 }
 h2 + a {
@@ -308,12 +333,17 @@ footer img[src$=".png"] + div {
 	font-family: 'Economica', sans-serif;
 }
 .conocer{
-	font-size: 215% !important;
+	font-size: 180% !important;
+	font-weight: 500;
 }
 .conocer + a{
-	background-color: #EED632 !important;
+	background-color: transparent;
+	border: 2px solid #DAB020;
+	color: #DAB020;
 	border-radius: 30px;
+	margin-bottom: 2em;
 }
 .conocer + a:hover{
 	color: #AF9014;
+	background-color: transparent;
 }
