--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,7 @@ img[src="imgs/logo.png"]{
 }
 .heading div h1{
 	font-size: 469% !important;
+	text-shadow: 5px 3px #DDA00C;
 }
 .heading div{
 	width: 80%;
@@ -62,18 +63,19 @@ article{
 	margin-bottom: 2em;
 }
 .heading div h1 + h3{
-	/*color: #f1d606;*/
 	color: black;
 	font-weight: bold;
 	font-size: 230%;
+	text-shadow: 2px 1px #DDA00C
 }
 
 h3:first-child[class="flow-text"]{
 	color: #eedf6e;
-	margin-top: 8%;
+	margin-top: 4%;
   letter-spacing: 10px;
   word-spacing: 5px;
-  font-size: 220%;
+  font-size: 250%;
+  font-weight: bold;
 }
 .divider:nth-child(2){
 	width: 14%;
@@ -84,6 +86,7 @@ h3:first-child[class="flow-text"]{
 }
 img[alt="perfil"], img[alt="coder"]{
 	height: 10em;
+	font-size: 140%;
 }
 #section article:nth-child(2){
 	padding-bottom: 3%;
@@ -104,29 +107,25 @@ img[alt="link"]{
 	width: 5em;
 	margin: 7% 7% 0 7%;
 }
-/*img[alt="link"]:hover{
-	background-color: black;
-	border-radius: 40px;
-}*/
 img[alt="cel"], [alt="github"], [alt="gmail"]{
 	width: 6em;
 	margin: 7% 7% 0 7%;
 }
-
-/*img[alt="cel"]:hover, [alt="github"]:hover, [alt="gmail"]:hover{
-	background-color: black;
-	border-radius: 100px;
-}*/
 h5:first-child{
 	font-family: 'Titillium Web', sans-serif;
 	color:#D9B716;
+	font-weight: bold;
 	margin-bottom: 2em;
+	font-size: 220%;
 
 }
-p[class="black-text"], p[class="black-text left-align"]{
+p[class="black-text"], p[class="black-text parrafo2"], p[class="black-text left-align"]{
 	font-family: 'Rajdhani', sans-serif;
 	font-weight: bold;
-	font-size: 110%;
+	font-size: 125%;
+}
+.parrafo2{
+	margin-top: 1em;
 }
 
 @keyframes latidos {
@@ -138,7 +137,6 @@ p[class="black-text"], p[class="black-text left-align"]{
 #boton-subir{
 	animation: latidos 1.5s infinite;
 	display: none;
-	/*background-color: #6b6b6b;*/
 	position: fixed;
 	right: 3%;
 	bottom: 3%;
@@ -156,7 +154,6 @@ button[type="button"]{
 	margin-left: 8%;
 	background-color: #6b6b6b;
 	border: 1px solid #E1BF22;
-	/*border: transparent;*/
 	border-radius: 8px;
 	margin-top: 3em;
 }
@@ -179,7 +176,6 @@ button[type="button"]:hover{
 	background-size: cover;
 	height: 15em;
 	border-radius: 10px;
-  /*margin-left: 11%;*/
   margin: 1em 0 2em 11%;
 }
 
@@ -188,7 +184,7 @@ button[type="button"]:hover{
 	background-color: rgba(0,0,0, 0.5);
 	height: 15em;
 	text-align: center;
-	padding-top: 4em;
+	padding-top: 2em;
 	border-radius: 10px;
 }
 
@@ -222,19 +218,12 @@ button[type="button"]:hover{
 .hover:hover div{
 	display: block;
 }
-/*.html{
-	background-image: url(../imgs/html.png);
+.descripcion{
+	display: inline-block;
+	color: #E3990A;
+	font-size: 120%;
+	font-weight: bold;
 }
-.css{
-	background-image: url(../imgs/css.png);
-}
-.js{
-	background-image: url(../imgs/js.png);
-}.b{
-	background-image: url(../imgs/b.png);
-}.m{
-	background-image: url(../imgs/m.png);
-}*/
 .framework{
 	margin-bottom: 3em;
 }
@@ -250,8 +239,6 @@ button[type="button"]:hover{
 }
 .uno:hover{
 	-webkit-transform: scale(1.1);
-/*	-ms-transform: scale(1.3);
-	transform: scale(1.3);*/
 }
 .trello{
 	background-image: url(../imgs/trello.png);
@@ -313,24 +300,6 @@ footer img[src$=".png"] + div {
 .progress{
 	background-color: rgba(0,0,0,0.2) !important;
 }
-/*.determinate{
-	background-color: red !important;
-}*/
-/*.html {
-	background-color: #FF6314 !important;
-}
-.css{
-	background-color: #9003B8 !important;
-}
-.js{
-	background-color: #FFA100 !important; 
-}
-.b{
-	background-color: #430156 !important;
-}
-.m{
-	background-color: #DD118D !important;
-}*/
 .lenguajes p{
 	display: inline-block;
 	color: #B16800;
@@ -354,7 +323,10 @@ footer img[src$=".png"] + div {
 }
 
 
-@media (max-width: 400px){
+@media (max-width: 415px){
+	h3:first-child[class="flow-text"]{
+		font-size: 180% !important;
+	}
 	.heading div h1{
 		font-size: 310% !important;
 	}
